Bug 1588955. Handle overflow more gracefully in GenerateFallbackData. r=aosmond

It turns out intersecting a rect with an empty rect doesn't
guarantee that the result is empty if overflow happens.

We work around this by checking dtRect for empty as well.

See 1622126 for more details.

Differential Revision: https://phabricator.services.mozilla.com/D66694